# spark-etl-template

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  main.py  mypy.ini  pyproject.toml
docs/: SAMPLE_DOC.md
src/: etl.py  logger.py
src/sample_task/: sample_etl.py
tests/: conftest.py  test_sample_etl.py
