[tool.poetry]
name = "spark-etl-template"
version = "0.1.0"
description = "Spark ETL Template"
authors = ["Tiago Vinicius <vinicius.remigio@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
pyspark = "3.5.1"
pandas = "2.2.1"
numpy = "1.26.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.3.0"
flake8 = "^3.9.2"
mypy = "1.8.0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
